--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="김수희 작가">
     <meta property="og:description" content="Artist SUI KIM">
-    <meta property="og:image" content="김수희.png">
-    <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
+    <meta property="og:image" content="sui.png">
     <title>김수희 작가</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -22,7 +21,7 @@
             height: 100px;
             border-radius: 100%;
             border: 2px solid lightsalmon;
-            background-image: url('김수희.png');
+            background-image: url('sui.png');
             background-position: center;
             background-size: cover;
        }
