--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <div class="profile"></div>
         <h1 class="main">SUI KIM</h1>
         <p class="sub">작가 김수희</p>
-        <a target="_blank" href="https://spartacodingclub.kr/">스파르타코딩클럽</a>
-        <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">항해99</a>
-        <a target="_blank" href="https://chang.spartacodingclub.kr/">창업 부트캠프 창</a>
-        <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">띵동코딩</a>
+        <a target="_blank" href="https://soohui25.wixsite.com/suikim">HOMEPAGE</a>
+        <a target="_blank" href="https://www.instagram.com/starry.bene/">TEXTILE</a>
+        <a target="_blank" href="https://www.instagram.com/assuias/">DAILY</a>
+       
     </div>
    
 </body>
